working on implementation...

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ CIC-IDS2017/
 *.csv
 *.pdf
 Toward-Generating-a-New-Intrusion-Detection-Dataset-and-Intrusion-Traffic-Characterization.pdf
+__pycache__/
